test/operator/test2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcingress
  namespace: mcingress-operator
  labels:
    name: myingress
spec:
  rules:
  - host: mcingress.test2
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mcingress
            port: 
              number: 5000
